16026 updated BASE and DATA_PATH

--- a/data/notebooks/example/tci_ndvi/TCI_NDVI.ipynb
+++ b/data/notebooks/example/tci_ndvi/TCI_NDVI.ipynb
@@ -52,6 +52,74 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "BASE = os.getcwd()\n",
+    "DATA_DIR = f\"/home/{os.getenv('NB_USER')}/work\"\n",
+    "API_KEY = os.path.join(DATA_DIR, \".secret/sentinel2_google_api_key.json\")\n",
+    "LOAD_DIR = os.path.join(DATA_DIR, \"satellite_imagery\")\n",
+    "RESULTS_DIR = os.path.join(DATA_DIR, \"results/example/tci_ndvi\")\n",
+    "NOTEBOOK_DIR = os.path.join(DATA_DIR, \"notebooks/example/tci_ndvi\")\n",
+    "\n",
+    "COLORMAP_BRBG = os.path.join(BASE, \"ndvi_colormap.npy\") \n",
+    "\n",
+    "PRODUCT_TYPE = 'L2A'\n",
+    "BANDS = {'TCI', 'B04', 'B08', }\n",
+    "CONSTRAINTS = {'NODATA_PIXEL_PERCENTAGE': 10.0, 'CLOUDY_PIXEL_PERCENTAGE': 5.0, }\n",
+    "\n",
+    "LAYERS = ['TCI', 'NDVI', ]\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "BASE"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "DATA_DIR"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "LOAD_DIR"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "START_DATE"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "END_DATE"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -81,16 +149,6 @@
    "metadata": {},
    "source": [
     "#### Сreate base path, usually env=jovyan"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "BASE = f\"/home/{os.getenv('NB_USER')}/work\"\n",
-    "BASE"
    ]
   },
   {
@@ -231,40 +289,6 @@
    "metadata": {},
    "source": [
     "#### 3. Load images"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "API_KEY = os.path.join(BASE, \".secret/sentinel2_google_api_key.json\")\n",
-    "LOAD_DIR = os.path.join(BASE, \"satellite_imagery\")\n",
-    "\n",
-    "PRODUCT_TYPE = 'L2A'\n",
-    "BANDS = {'TCI', 'B04', 'B08', }\n",
-    "CONSTRAINTS = {'NODATA_PIXEL_PERCENTAGE': 10.0, 'CLOUDY_PIXEL_PERCENTAGE': 5.0, }\n",
-    "\n",
-    "LAYERS = ['TCI', 'NDVI', ]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "START_DATE"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "END_DATE"
    ]
   },
   {
@@ -424,10 +448,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "RESULTS_DIR = os.path.join(BASE, \"results/example/tci_ndvi\")\n",
-    "\n",
-    "NOTEBOOK_DIR = os.path.join(BASE, \"notebooks/example/tci_ndvi\")\n",
-    "COLORMAP_BRBG = os.path.join(NOTEBOOK_DIR, \"ndvi_colormap.npy\") "
+    "COLORMAP_BRBG"
    ]
   },
   {
@@ -662,7 +683,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.9"
+   "version": "3.7.10"
   }
  },
  "nbformat": 4,
