16026 tci_ndvi, pbdnn done. Removed old notebooks from development db, add pbdnn notebook to development db

--- a/data/notebooks/example/geojson.ipynb
+++ b/data/notebooks/example/geojson.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,18 +28,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'3.7.10 | packaged by conda-forge | (default, Feb 19 2021, 16:07:37) \\n[GCC 9.3.0]'"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "sys.version"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "jovyan\n"
+     ]
+    }
+   ],
    "source": [
     "NB_USER = os.getenv('NB_USER')\n",
     "print(NB_USER)"
@@ -47,7 +66,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "BASE = os.getcwd()\n",
+    "DATA_DIR = f\"/home/{NB_USER}/work\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'/home/jovyan/work'"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "DATA_DIR"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -372,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -423,7 +472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -455,7 +504,7 @@
     "        item['start_date'] = start_date\n",
     "        item['end_date'] = end_date\n",
     "        print(f\"Randomly selected to add start_date: {start_date} and end_date: {end_date}\")   \n",
-    "    return item, f\"/home/{NB_USER}/work/results/example/{id_}_{name}_{file_date.split('T')[0]}.geojson.temp\""
+    "    return item, f\"{BASE}/results/example/{id_}_{name}_{file_date.split('T')[0]}.geojson.temp\""
    ]
   },
   {
@@ -467,9 +516,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Generating .geojson file...\n",
+      "4 features will be in current file\n",
+      "Generated 4 features\n",
+      "Generated temp file: /home/jovyan/work/notebooks/example/results/example/d37ac205-4296-496d-9667-77b25487db1e_Green_2020-09-08.geojson.temp\n",
+      "Rename temp file: /home/jovyan/work/notebooks/example/results/example/d37ac205-4296-496d-9667-77b25487db1e_Green_2020-09-08.geojson.temp to /home/jovyan/work/notebooks/example/results/example/d37ac205-4296-496d-9667-77b25487db1e_Green_2020-09-08.geojson\n",
+      "Execution finished\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"Generating .geojson file...\")\n",
     "\n",
@@ -504,7 +566,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.9"
+   "version": "3.7.10"
   }
  },
  "nbformat": 4,
