--- a/data/notebooks/pw/croptype_pipeline.ipynb
+++ b/data/notebooks/pw/croptype_pipeline.ipynb
@@ -2,10 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
+    "REQUEST_ID = 1014\n",
     "AOI = 'POLYGON ((-85.483932 40.367801, -85.64349199999999 40.367801, -85.64349199999999 40.226597, -85.483932 40.226597, -85.483932 40.367801))'\n",
     "START_DATE = '2020-04-01'\n",
     "END_DATE = '2020-09-01'"
@@ -13,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,23 +32,25 @@
     "from datetime import datetime\n",
     "\n",
     "os.environ[\"CUDA_VISIBLE_DEVICES\"] = \"0\"\n",
-    "sys.path.append(\"code/\")\n",
-    "from code.prediction_pipeline.run import run"
+    "from prediction_pipeline.run import run"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "USER = os.getenv('NB_USER')\n",
-    "NAME = 'Crop map'"
+    "NAME = 'Crop map'\n",
+    "BASE = os.getcwd()\n",
+    "DATA_DIR = f\"/home/{USER}/work\"\n",
+    "RESULTS_DIR = os.path.join(DATA_DIR, \"results/pw/\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,15 +63,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "scrolled": true
    },
    "outputs": [],
    "source": [
-    "CONFIG_PATH = f\"/home/{USER}/work/notebooks/pw/code/prediction_pipeline/config.yml\"\n",
+    "CONFIG_PATH = f\"prediction_pipeline/config.yml\"\n",
+    "with open(CONFIG_PATH) as f:\n",
+    "    config = yaml.safe_load(f)\n",
+    "    \n",
+    "config['input']['data_dir'] = os.path.join(DATA_DIR, 'notebooks/pw/data/predictions')\n",
+    "config['sentinel1']['download']['scihub_creds'] = os.path.join(\n",
+    "    DATA_DIR, 'notebooks/pw/.secret/scihub_creds.json')\n",
+    "config['sentinel2']['download']['google_api_key'] = os.path.join(\n",
+    "    DATA_DIR, '.secret/sentinel2_google_api_key.json')\n",
+    "config['predict']['model_weights_path'] = os.path.join(\n",
+    "    DATA_DIR, 'notebooks/pw/data/experiments/mi_clstm_192_mask_64_crop_s1_s2_5_months_10m/logs/checkpoints/best.pth')\n",
+    "config['predict']['experiments_dir'] = os.path.join(\n",
+    "    DATA_DIR, 'notebooks/pw/data/experiments/')\n",
+    "config['predict']['class_names_json'] = os.path.join(\n",
+    "    DATA_DIR, 'notebooks/pw/data/labels/ohio/cropscape_labels/merged_classes/final_classes.json')\n",
+    "\n",
+    "with open(CONFIG_PATH, 'w') as f:\n",
+    "    f.write(yaml.dump(config))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:prediction_pipeline.run:Started downloading Sentinel-1\n",
+      "Downloading: 100%|██████████| 1.03G/1.03G [10:45<00:00, 1.59MB/s]\n",
+      "MD5 checksumming: 100%|██████████| 1.03G/1.03G [00:02<00:00, 449MB/s]\n",
+      "Downloading: 100%|██████████| 1.03G/1.03G [05:49<00:00, 2.94MB/s]\n",
+      "MD5 checksumming: 100%|██████████| 1.03G/1.03G [00:02<00:00, 457MB/s]\n",
+      "Downloading: 100%|██████████| 1.02G/1.02G [05:55<00:00, 2.88MB/s]\n",
+      "MD5 checksumming: 100%|██████████| 1.02G/1.02G [00:02<00:00, 433MB/s]\n",
+      "Downloading: 100%|██████████| 1.03G/1.03G [06:02<00:00, 2.84MB/s]\n",
+      "MD5 checksumming: 100%|██████████| 1.03G/1.03G [00:02<00:00, 498MB/s]\n",
+      "Downloading: 100%|██████████| 1.03G/1.03G [04:39<00:00, 3.68MB/s]\n",
+      "MD5 checksumming: 100%|██████████| 1.03G/1.03G [00:02<00:00, 422MB/s]\n",
+      "Downloading: 100%|██████████| 1.04G/1.04G [08:01<00:00, 2.16MB/s]\n",
+      "MD5 checksumming: 100%|██████████| 1.04G/1.04G [00:02<00:00, 412MB/s]\n",
+      "Downloading:  30%|███       | 308M/1.01G [01:27<03:28, 3.37MB/s] "
+     ]
+    }
+   ],
+   "source": [
     "prediction_file = run(CONFIG_PATH, aoi_filename, start_date, end_date, REQUEST_ID)\n",
     "os.remove(aoi_filename)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "config"
    ]
   },
   {
@@ -203,7 +261,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "RESULTS_DIR = f\"/home/{USER}/work/results/pw/\"\n",
     "result_name = f\"{REQUEST_ID}_{START_DATE}_{END_DATE}.tif\"\n",
     "os.makedirs(RESULTS_DIR, exist_ok=True)\n",
     "dst_file = os.path.join(RESULTS_DIR, result_name)\n",
