--- a/data/notebooks/example/geotiff.ipynb
+++ b/data/notebooks/example/geotiff.ipynb
@@ -51,16 +51,11 @@
    "outputs": [],
    "source": [
     "NB_USER = os.getenv('NB_USER')\n",
-    "print(NB_USER)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "api_key = f\"/home/{NB_USER}/work/.secret/sentinel2_google_api_key.json\""
+    "BASE = os.getcwd()\n",
+    "DATA_DIR = f\"/home/{NB_USER}/work\"\n",
+    "\n",
+    "API_KEY = os.path.join(DATA_DIR, \".secret/sentinel2_google_api_key.json\")\n",
+    "LOAD_DIR = os.path.join(DATA_DIR, \"satellite_imagery\")"
    ]
   },
   {
@@ -258,7 +253,7 @@
     "    BANDS = {'TCI',}\n",
     "    CONSTRAINTS = {'NODATA_PIXEL_PERCENTAGE': 15.0, 'CLOUDY_PIXEL_PERCENTAGE': 10.0, }\n",
     "    \n",
-    "    loader = Sentinel2Downloader(api_key, verbose=verbose)\n",
+    "    loader = Sentinel2Downloader(API_KEY, verbose=verbose)\n",
     "    loaded = loader.download(product_type,\n",
     "                             tiles,\n",
     "                             start_date=start_date,\n",
@@ -298,15 +293,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dir_ = f\"/home/{NB_USER}/work/satellite_imagery\""
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -319,8 +305,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tile_path = load_tile(dir_)\n",
-    "with tempfile.TemporaryDirectory(dir=dir_) as tmpdirname:\n",
+    "tile_path = load_tile(LOAD_DIR)\n",
+    "with tempfile.TemporaryDirectory(dir=LOAD_DIR) as tmpdirname:\n",
     "    print('Сreated temporary directory for calculations:', tmpdirname)\n",
     "        \n",
     "    locations = {'tetleha': tetleha, 'forest': forest, 'kharkiv': kharkiv}\n",
@@ -331,13 +317,6 @@
     "\n",
     "print(\"Execution finished\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -356,7 +335,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.9"
+   "version": "3.7.10"
   }
  },
  "nbformat": 4,
