16026 updated example/geojson.ipynb  to new requirements

--- a/data/notebooks/example/geojson.ipynb
+++ b/data/notebooks/example/geojson.ipynb
@@ -51,17 +51,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "BASE = os.getcwd()\n",
     "DATA_DIR = f\"/home/{NB_USER}/work\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "DATA_DIR"
    ]
   },
   {
@@ -474,7 +464,7 @@
     "        item['start_date'] = start_date\n",
     "        item['end_date'] = end_date\n",
     "        print(f\"Randomly selected to add start_date: {start_date} and end_date: {end_date}\")   \n",
-    "    return item, f\"{BASE}/results/example/{id_}_{name}_{file_date.split('T')[0]}.geojson.temp\""
+    "    return item, f\"{DATA_DIR}/results/example/{id_}_{name}_{file_date.split('T')[0]}.geojson.temp\""
    ]
   },
   {
