16026 updated example/tci_ndvi/TCI_NDVI.ipynb  to new requirements

--- a/data/notebooks/example/tci_ndvi/TCI_NDVI.ipynb
+++ b/data/notebooks/example/tci_ndvi/TCI_NDVI.ipynb
@@ -9,19 +9,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "AOI = 'POLYGON ((-85.299088 40.339368, -85.332047 40.241477, -85.134979 40.229427, -85.157639 40.34146, -85.299088 40.339368))' \n",
-    "REQUEST_ID = 51\n",
+    "REQUEST_ID = 0\n",
     "START_DATE = \"2020-07-01\"\n",
     "END_DATE = \"2020-08-01\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,107 +71,8 @@
     "CONSTRAINTS = {'NODATA_PIXEL_PERCENTAGE': 10.0, 'CLOUDY_PIXEL_PERCENTAGE': 5.0, }\n",
     "\n",
     "LAYERS = ['TCI', 'NDVI', ]\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'/home/jovyan/work/notebooks/example/tci_ndvi'"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "BASE"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'/home/jovyan/work'"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "DATA_DIR"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'/home/jovyan/work/satellite_imagery'"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "LOAD_DIR"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'2020-07-01'"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "START_DATE"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'2020-08-01'"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "END_DATE"
+    "\n",
+    "output_dir = os.path.join(RESULTS_DIR, str(REQUEST_ID))"
    ]
   },
   {
@@ -183,63 +84,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "aoi = gp.GeoDataFrame(geometry=[wkt.loads(AOI)], crs=\"epsg:4326\")    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>geometry</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>POLYGON ((-85.29909 40.33937, -85.33205 40.241...</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                            geometry\n",
-       "0  POLYGON ((-85.29909 40.33937, -85.33205 40.241..."
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "aoi"
    ]
   },
   {
@@ -251,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -267,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -304,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -330,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -365,54 +214,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>tile</th>\n",
-       "      <th>geometry</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>16TFK</td>\n",
-       "      <td>POLYGON Z ((-85.29909 40.33937 0.00000, -85.15...</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "    tile                                           geometry\n",
-       "0  16TFK  POLYGON Z ((-85.29909 40.33937 0.00000, -85.15..."
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "overlap_tiles = get_intersected_tiles(aoi.copy(), sentinel_grid.copy())\n",
     "overlap_tiles"
@@ -420,30 +224,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<Geographic 2D CRS: EPSG:4326>\n",
-       "Name: WGS 84\n",
-       "Axis Info [ellipsoidal]:\n",
-       "- Lat[north]: Geodetic latitude (degree)\n",
-       "- Lon[east]: Geodetic longitude (degree)\n",
-       "Area of Use:\n",
-       "- name: World\n",
-       "- bounds: (-180.0, -90.0, 180.0, 90.0)\n",
-       "Datum: World Geodetic System 1984\n",
-       "- Ellipsoid: WGS 84\n",
-       "- Prime Meridian: Greenwich"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "overlap_tiles.crs"
    ]
@@ -457,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -476,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -485,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -494,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -530,28 +313,14 @@
     "            print(f\"Loading images for tile {tile} finished\")\n",
     "        else:\n",
     "            print(f\"Images for tile {tile} were not loaded!\")\n",
-    "        \n",
-    "    # tile_folders = dict()\n",
-    "    # for tile, tile_paths in loadings.items():\n",
-    "    #    tile_folders[tile] = {str(Path(tile_path[0]).parent) for tile_path in tile_paths}\n",
     "    return loadings"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Loading images for tile: 16TFK...\n",
-      "For tile: 16TFK and dates 2020-07-01 2020-08-01 proper images not found! Shift dates to 2020-06-01 2020-07-01!\n",
-      "Loading images for tile 16TFK finished\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "loadings = load_images(overlap_tiles.tile.values, START_DATE, END_DATE)"
    ]
@@ -565,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -602,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -618,20 +387,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'/home/jovyan/work/notebooks/example/tci_ndvi/ndvi_colormap.npy'"
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "COLORMAP_BRBG"
    ]
@@ -645,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -662,7 +420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -671,27 +429,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(256, 3)"
-      ]
-     },
-     "execution_count": 27,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "COLORS.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -708,7 +455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -720,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -756,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -769,7 +516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -803,46 +550,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'/home/jovyan/work/results/example/tci_ndvi/51'"
-      ]
-     },
-     "execution_count": 33,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "RESULTS_DIR = os.path.join(RESULTS_DIR, str(REQUEST_ID))\n",
-    "RESULTS_DIR"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 34,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "16TFK: Start calculation TCI, NDVI\n",
-      "16TFK: End calculation TCI, NDVI\n",
-      "16TFK: Rename /home/jovyan/work/results/example/tci_ndvi/51/51_16TFK_20200611_NDVI.tif.temp->/home/jovyan/work/results/example/tci_ndvi/51/51_16TFK_20200611_NDVI.tif\n",
-      " /home/jovyan/work/results/example/tci_ndvi/51/51_16TFK_20200611_TCI.tif.temp->/home/jovyan/work/results/example/tci_ndvi/51/51_16TFK_20200611_TCI.tif\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "if not filtered:\n",
     "    raise ValueError(\"Images not loaded for given AOI. Change dates, constraints\")\n",
     "    \n",
-    "os.makedirs(RESULTS_DIR, exist_ok=True)\n",
+    "os.makedirs(output_dir, exist_ok=True)\n",
     "\n",
     "for row in overlap_tiles.itertuples():\n",
     "    tile = row.tile\n",
@@ -854,8 +569,8 @@
     "        \n",
     "        acquired_date = filtered[tile]['date']\n",
     "        base_filename = f\"{REQUEST_ID}_{tile}_{acquired_date}_\"\n",
-    "        temp_ndvi_filename = os.path.join(RESULTS_DIR, base_filename + \"NDVI.tif.temp\")\n",
-    "        temp_tci_filename = os.path.join(RESULTS_DIR, base_filename + \"TCI.tif.temp\")\n",
+    "        temp_ndvi_filename = os.path.join(output_dir, base_filename + \"NDVI.tif.temp\")\n",
+    "        temp_tci_filename = os.path.join(output_dir, base_filename + \"TCI.tif.temp\")\n",
     "        \n",
     "        tile_crs = NDVI(paths['NIR'], paths['RED'], temp_ndvi_filename)\n",
     "        transformed_poly = to_crs(polygon, tile_crs)\n",
@@ -876,13 +591,6 @@
     "    except Exception as e:\n",
     "        print(f\"{tile}: Cannot calculate TCI, NDVI: {str(e)}\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
